--- a/mean/Vagrantfile
+++ b/mean/Vagrantfile
@@ -86,13 +86,10 @@ Vagrant.configure(2) do |config|
   # Enable provisioning with Ansible
   config.vm.provision :ansible do |ansible|
     ansible.playbook = "./ansible/playbook.yml"
-    ansible.inventory_path = "./ansible/inventory"
-    #ansible.inventory_path = ".vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory"
+    #ansible.inventory_path = "./ansible/inventory"
+    ansible.inventory_path = ".vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory"
     # bug on playbook flags
-    ansible.extra_vars = { ansible_ssh_user: 'vagrant',
-                           ansible_ssh_host: '127.0.0.1',
-                           ansible_ssh_port: '2222' }
-
+    ansible.extra_vars = { ansible_ssh_user: 'vagrant'}
   end
 
 end
