--- a/wordpress/Vagrantfile
+++ b/wordpress/Vagrantfile
@@ -5,7 +5,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-  config.vm.define "lamp-centos" do |centos|
+  config.vm.define "wordpress-centos" do |centos|
     centos.vm.box = "centos7-base"
     centos.vm.box_url = "https://github.com/holms/vagrant-centos7-box/releases/download/7.1.1503.001/CentOS-7.1.1503-x86_64-netboot.box"
     centos.vm.network "forwarded_port", guest: 80, host: 8080
