--- a/wordpress/ansible/playbook.yml
+++ b/wordpress/ansible/playbook.yml
@@ -1,36 +1,25 @@
 ---
 # This playbook deploys the whole LAMP application stack in this site.  
 
-- name: apply common configuration to all nodes
-  hosts: all
+- name: Install WordPress, MySQL, Nginx, and PHP-FPM
+  hosts: wordpress-centos
   remote_user: vagrant
+  # remote_user: user
   sudo: yes
+
   vars:
-    ntpserver: es.pool.ntp.org
+    wp_version: 4.2.4
+    wp_sha256sum: 42ca594afc709cbef8528a6096f5a1efe96dcf3164e7ce321e87d57ae015cc82
+    wp_db_name: wordpress
+    wp_db_user: wordpress
+    wp_db_password: secret
+    mysql_port: 3306
+    server_hostname: www.example1.com
+    auto_up_disable: false
+    core_update_level: true
   roles:
     - common
-
-- name: configure and deploy the webservers and application code
-  #hosts: webservers
-  hosts: all
-  remote_user: vagrant
-  sudo: yes
-  vars:
-    repository: https://github.com/bennojoy/mywebapp.git
-    httpd_port: 80
-  roles:
-    - web
-
-- name: deploy MySQL and configure the databases
-  #hosts: dbservers
-  hosts: all
-  remote_user: vagrant
-  sudo: yes
-  vars:
-    mysqlservice: mysqld
-    mysql_port: 3306
-    dbuser: foouser
-    dbname: foodb
-    upassword: abc
-  roles:
     - db
+    - web
+    - php-fpm
+    - wordpress
