wordpress provision working

--- a/wordpress/ansible/roles/common/tasks/main.yml
+++ b/wordpress/ansible/roles/common/tasks/main.yml
@@ -13,5 +13,8 @@
   service: name=ntpd state=started enabled=yes
   tags: ntp
 
+- name: Install epel repository
+  yum: name=epel-release state=present
+
 - name: Install libselinux-python
   yum: name=libselinux-python state=present
