--- a/wordpress/ansible/roles/php-fpm/templates/wordpress.conf
+++ b/wordpress/ansible/roles/php-fpm/templates/wordpress.conf
@@ -1,7 +1,7 @@
 [wordpress]
 listen = /var/run/php-fpm/wordpress.sock
-listen.owner = nginx
-listen.group = nginx
+listen.owner = apache
+listen.group = apache
 listen.mode = 0660
 user = wordpress
 group = wordpress
