--- a/wordpress/ansible/roles/php-addons/tasks/main.yml
+++ b/wordpress/ansible/roles/php-addons/tasks/main.yml
@@ -12,6 +12,7 @@
     - php-process
     - php-simplepie
     - php-xml
+    - php-gd
 
 - name: Disable default pool
   command: mv /etc/php-fpm.d/www.conf /etc/php-fpm.d/www.disabled creates=/etc/php-fpm.d/www.disabled
@@ -20,4 +21,3 @@
 - name: Copy php-fpm configuration
   template: src=wordpress.conf dest=/etc/php-fpm.d/
   notify: restart php-fpm
-
