--- a/wordpress/ansible/roles/php-addons/templates/wordpress.conf
+++ b/wordpress/ansible/roles/php-addons/templates/wordpress.conf
@@ -3,13 +3,13 @@ listen = /var/run/php-fpm/wordpress.sock
 listen.owner = apache
 listen.group = apache
 listen.mode = 0660
-user = wordpress
-group = wordpress
+user = apache
+group = apache
 pm = dynamic
 pm.max_children = 10
 pm.start_servers = 1
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 pm.max_requests = 500
-chdir = /srv/wordpress/
-php_admin_value[open_basedir] = /srv/wordpress/:/tmp
+chdir = /var/www/html
+php_admin_value[open_basedir] = /var/www/html:/tmp
