--- a/wordpress/ansible/roles/wordpress/tasks/main.yml
+++ b/wordpress/ansible/roles/wordpress/tasks/main.yml
@@ -1,30 +1,39 @@
 ---
 - name: Download WordPress
-  get_url: url=http://wordpress.org/wordpress-{{ wp_version }}.tar.gz dest=/srv/wordpress-{{ wp_version }}.tar.gz
+  get_url: url=http://wordpress.org/wordpress-{{ wp_version }}.tar.gz dest=~/wordpress-{{ wp_version }}.tar.gz
            sha256sum="{{ wp_sha256sum }}"
 
 - name: Extract archive
-  command: chdir=/srv/ /bin/tar xvf wordpress-{{ wp_version }}.tar.gz creates=/srv/wordpress
+  command: chdir=~ /bin/tar xvf wordpress-{{ wp_version }}.tar.gz creates=~/wordpress
 
-- name: Add group "wordpress"
-  group: name=wordpress
+#- name: Add group "wordpress"
+#  group: name=wordpress
 
-- name: Add user "wordpress"
-  user: name=wordpress group=wordpress home=/srv/wordpress/
+#- name: Add user "wordpress"
+#  user: name=wordpress group=wordpress home=/srv/wordpress/
 
 - name: Fetch random salts for WordPress config
   local_action: command curl https://api.wordpress.org/secret-key/1.1/salt/
   register: "wp_salt"
   sudo: no
 
-- name: Create WordPress database
-  mysql_db: name={{ wp_db_name }} state=present
+#- name: Create WordPress database
+#  mysql_db: name={{ wp_db_name }} state=present
 
-- name: Create WordPress database user
-  mysql_user: name={{ wp_db_user }} password={{ wp_db_password }} priv={{ wp_db_name }}.*:ALL host='localhost' state=present
+#- name: Create WordPress database user
+#  mysql_user: name={{ wp_db_user }} password={{ wp_db_password }} priv={{ wp_db_name }}.*:ALL host='localhost' state=present
 
-- name: Copy WordPress config file
-  template: src=wp-config.php dest=/srv/wordpress/
+#- name: Copy WordPress config file
+#  template: src=wp-config.php dest=/srv/wordpress/
+
+#- name: Change ownership of WordPress installation
+#  file: path=/srv/wordpress/ owner=wordpress group=wordpress state=directory recurse=yes
+
+
+- name: Sync publishing folder
+  command: mkdir /var/www
+  command: mkdir /var/www/html
+  command: rsync -avP ~/wordpress /var/www/html
 
 - name: Change ownership of WordPress installation
-  file: path=/srv/wordpress/ owner=wordpress group=wordpress state=directory recurse=yes
+  file: path=/var/www owner=apache group=apache state=directory recurse=yes
